# rush-agent

./: .gitignore  AGENTS.md  README.md  index.html  latest.json  package-lock.json  package.json  start.bat  vite.config.ts  vitest-fresh.txt  vitest-out.txt
local-proxy/: README.txt  config.toml  requirements.txt  start-rush.bat  start.bat
local-proxy/backend/: image_gen.py  main.py
local-proxy/tor_data_9050/: cached-certs  control_auth_cookie  state
local-proxy/tor_data_9051/: cached-certs  control_auth_cookie  state
local-proxy/tor_data_9052/: cached-certs  control_auth_cookie  state
local-proxy/tor_data_9053/: cached-certs  control_auth_cookie  state
local-proxy/tor_data_9054/: cached-certs  cached-microdesc-consensus  cached-microdescs.new  control_auth_cookie  state
local-proxy/tor_data_9055/: cached-certs  cached-microdescs.new  control_auth_cookie  state
local-proxy/worker/: config.py  direct.py  leech.py
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_commands.rs  code_commands.rs  fs_commands.rs  git_commands.rs  lib.rs  local_proxy_commands.rs  lsp_commands.rs  main.rs  mcp_commands.rs  pack_commands.rs  package_commands.rs  system_commands.rs  terminal_commands.rs  worktree_commands.rs
src-tauri/tests/: lsp_handshake.rs
src/core/: brainRuntime.test.ts  brainRuntime.ts  brainStore.ts  effort.ts  fileStore.ts  flowPlanner.test.ts  flowPlanner.ts  flowRuntime.ts  flowScheduler.test.ts  flowScheduler.ts  flowStore.test.ts  flowStore.ts  (+16 more)
(+95 files in other folders)
